# ai-product

./: .env.evomap  .gitignore
baicizhan-mvp/: README.md  docker-compose.yml
baicizhan-mvp/backend/: Dockerfile  requirements.txt
baicizhan-mvp/backend/app/: db.py  main.py  models.py  settings.py
baicizhan-mvp/backend/data/: seed_words.json
baicizhan-mvp/website/baicizhan-web-mvp/: DESIGN.md  README.md  index.html  package.json
baicizhan-mvp/website/baicizhan-web-mvp/src/: App.tsx  index.css
baicizhan-mvp/website/baicizhan-web-mvp/src/components/: PhoneShell.tsx  TopBar.tsx
baicizhan-mvp/website/baicizhan-web-mvp/src/pages/: Home.tsx  Study.tsx  WordDetail.tsx
deepsearch-fire/: requirements.txt  result-windows.txt  result.txt
deepsearch-fire/bilibili_downloader/: cli.py  core.py
docs/plans/: 2026-03-08-tools-directory-implementation.md  2026-03-08-tools-directory-structure-design.md
remote_computer_use/: main.py
tools/bilibili_downloader/: README.md  pyproject.toml  requirements.txt
tools/bilibili_downloader/bilibili_downloader/: cli.py  core.py
tools/video_downloader/: README.md  pyproject.toml  requirements.txt
tools/video_downloader/video_downloader/: __init__.py  cli.py  core.py
