[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-text-extractor"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" }
]
description = "B站视频文本提取工具，支持字幕下载和音频转文字"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "yt-dlp>=2026.3.3",
  "faster-whisper>=1.2.1",
  "ffmpeg-python>=0.2.0",
  "click>=8.3.1",
  "torch>=2.10.0",
  "ctranslate2>=4.7.1"
]

[project.scripts]
bilibili-text = "bilibili_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
