[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "video-downloader"
version = "0.1.0"
authors = [
  { name="Your Name", email="your@email.com" }
]
description = "通用视频下载工具，从网页中提取并下载所有可用的视频"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "yt-dlp>=2026.3.3",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "click>=8.3.1"
]

[project.scripts]
video-downloader = "video_downloader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
